--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">demo</string>
+    <string name="connect">连接LBService</string>
+    <string name="disconnect">断开LBService</string>
+    <string name="set_out">传输数据</string>
 </resources>
