--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LuBan</string>
+    <string name="info">Coded by youngytj</string>
     <string name="client_default">默认</string>
     <string name="navigation_menu_title">功能：</string>
     <string name="exit">退出程序</string>
@@ -25,4 +26,7 @@
 
     <string name="menu_move_to_floating">添加到悬浮窗</string>
     <string name="menu_move_out_floating">从悬浮窗移除</string>
+
+    <string name="author_link"><a href="https://youngytj.github.io/">Coded by youngytj</a></string>
+    <string name="project_link"><a href="https://github.com/youngytj/LuBan">项目主页</a></string>
 </resources>
