--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="open">打开</string>
     <string name="close">关闭</string>
     <string name="about">关于</string>
+    <string name="setting">设置</string>
     <string name="delete">清空</string>
     <string name="save">保存</string>
     <string name="start">开始</string>
