--- a/luban.sampleclient/src/main/res/values/strings.xml
+++ b/luban.sampleclient/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">LB Sample App</string>
     <string name="connect">连接LBService</string>
     <string name="disconnect">断开LBService</string>
-    <string name="set_out">传输数据</string>
+    <string name="crash_test">崩溃测试</string>
 </resources>
